# AppuntiMagistrale

./: .gitignore  README.md
Computer_Graphics/: Cmake_template.txt  main_template.cpp
Computer_Graphics/LAB_0/2D_SIERPINSKY/: CMakeLists.txt  ShaderMaker.h  main.cpp
Computer_Graphics/LAB_0/2D_SIERPINSKY/res/: fragmentShader.glsl  vertexShader.glsl
Computer_Graphics/LAB_01/: .gitignore  LAB_01.sln
Computer_Graphics/LAB_1/LAB_1/: CMakeLists.txt  main.cpp
Computer_Graphics/LAB_4/: LAB_04_students.cpp  LAB_4.sln  LAB_4.vcxproj  LAB_4.vcxproj.filters  argparser.h  bag.h  boundingbox.cpp  boundingbox.h  camera.cpp  camera.h  edge.cpp  edge.h  face.cpp  face.h  glCanvas.cpp  glCanvas.h  hit.h  material.cpp  material.h  matrix.cpp  matrix.h  mesh.cpp  mesh.h  radiosity.cpp  radiosity.h  ray.h  raytracer.h  raytracer_students.cpp  raytree.cpp  raytree.h  sphere.cpp  sphere.h  utils.h  vectors.h  vertex.h  vertex_parent.h
Computer_Graphics/Lab_7/: HUD_Logger.cpp  HUD_Logger.h  LAB_07_students.cpp  Lab_7.sln  Lab_7.vcxproj  Lab_7.vcxproj.filters
Computer_Vision/LabSession1/: LabSession1 - Exercises Solutions.ipynb  LabSession1 - Exercises.ipynb  LabSession1.ipynb
Computer_Vision/LabSession2/: LabSession2-Exercises.ipynb  LabSession2-ExercisesSolutions.ipynb
Data_Mining/: ML-Python-Lab-Data.csv  federico.andrucci.ipynb  ml-lab-topic02-data-exploration.ipynb
Sistemi_Operativi_M/: lezione_1.md  sistemi_operativi_M.aux  sistemi_operativi_M.fdb_latexmk  sistemi_operativi_M.fls  sistemi_operativi_M.tex  sistemi_operativi_M.toc  test.tex
(+237 files in other folders)
